--- a/styles.css
+++ b/styles.css
@@ -101,8 +101,13 @@ a:hover {
         grid-template-columns: 
             1fr repeat(3, minmax(150px, 20.5rem)) 1fr;
         grid-template-rows: 1fr auto 1fr;
-
+        min-height: 33.33rem;
     }
+
+    a {
+        margin-top: 5.67rem;
+    }
+
     section:nth-child(1) {
         border-radius: 7px 0 0 7px;
         grid-column: 2;
